--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
+</head>
+<body>
+    <div class="background"></div>
+    <header class="header">
+        <h1>Title</h1>
+    </header>
+    <nav id="nav">
+        <div class="navbar">
+            <ul class="list">
+                <li class="listitems" id="active"><a href="">Home</a></li>
+                <li class="listitems"><a href="">About</a></li>
+                <li class="listitems"><a href="">Donate</a></li>
+            </ul>
+        </div>
+        <div id="search">
+            <form id="form" action="http://www.google.com/search" method="get" accept-charset="utf-8">
+                <input type="text" name="q" id="search-input" placeholder="search on google..." autocomplete="on" />
+                <button type="submit">&#128269;</button>
+            </form>
+        </div>
+    </nav>
+    <div class="container">
+        <img class="image" src="img/tree.jpg" alt="can't load image" />
+        <div class="discription">
+            <h3 class="heading">we planted 1000 trees in a day</h3>
+            <p>in a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 trees</p>
+                <a href="">Read More...</a>
+        </div>
+    </div>
+    <div class="container">
+        <img class="image" src="img/tree.jpg" alt="can't load image" />
+        <div class="discription">
+            <h3 class="heading">we planted 1000 trees in a day</h3>
+            <p>in a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 trees</p>
+                <a href="">Read More...</a>
+        </div>
+    </div>
+    <div class="container">
+        <img class="image" src="img/tree.jpg" alt="can't load image" />
+        <div class="discription">
+            <h3 class="heading">we planted 1000 trees in a day</h3>
+            <p>in a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 treesn a day we planted 100 trees</p>
+                <a href="">Read More...</a>
+        </div>
+    </div>
+    <div id="donate-btn">Donate Now</div>
+    <footer id="footer">
+        <ul class="list">
+            <li class="listitems"><a href="">Facebook</a></li>
+            <li class="listitems"><a href="">Twiiter</a></li>
+            <li class="listitems"><a href="">Instagram</a></li>
+            <li class="listitems"><a href="">Github</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
