--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="list">
                 <li class="listitems" id="active"><a href="">Home</a></li>
                 <li class="listitems"><a href="">About</a></li>
-                <li class="listitems"><a href="">Donate</a></li>
+                <li class="listitems"><a href="html/donate.html">Donate</a></li>
             </ul>
         </div>
         <div id="search">
@@ -58,7 +58,7 @@
                 <a href="">Read More...</a>
         </div>
     </div>
-    <div id="donate-btn">Donate Now</div>
+   <a href="html/donate.html"> <div id="donate-btn">Donate Now</div></a>
     <footer id="footer">
         <ul class="list">
             <li class="listitems"><a href="">Facebook</a></li>
