--- a/html/about.html
+++ b/html/about.html
@@ -1,1 +1,114 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Green Planet - About Us</title>
+	<link rel="stylesheet" href="../css/about.css" type="text/css" media="all" />
+</head>
+<body>
+	<div id="bg"></div>
+	
+	<div class="heading">
+		<h1>About Us</h1>
+	</div>
+	
+	
+	<section class="section" id="what-we-do">
+		<h2>What we do?</h2>
+		<p>We travell all over the world observe the condition of forest in that area and if we find out that the forest is on the way of destruction, we gather the peoples from that area, we explain them importance of forest and trees in our life. we explain them that we will not survive if trees are gone dead and with the help of them we plant trees, take of that trees and when we realise that now the forest is safe we move on.</p>
+		<p>Below is one of our project in which we saved a forest of Khasi hills in shilong, meghalaya. This is just one and we are going to does this work through out our life. But our organisation will go on serving the forests even after our death.</p>
+		<div class="content">
+			<h5>India<br />Khasi Hills</h5>
+			<div id="khasipic"></div>
+			<p>The Khasi people are traditionally a forest-dependent community: using the native cloud forest for shelter, firewood, medicine, food and even for spiritual traditions. The Meghalaya state, or "the abode of clouds" in Sanskrit, is of international importance, recognized as one of the wettest places on earth and a biodiversity hotspot. However, the area and the communities are now at risk as the forest is being cleared by charcoal production,  stone quarrying and animal grazing.</p>
+			<p><span>Green Planet</span> team with eleven indigenous governments and 75 Khasi villages to restore the forests, using methods like Assisted Natural Regeneration (ANR) and enrichment planting. The local communities play a key role in the restoration: they manage the tree nurseries, perform the required thinning, weeding, establish the natural fire lines and delimit the no-go zones to protect the forest from animal grazing and human interference.</p>
+			<p>Through supporting self-help groups and farmer´s clubs, <span>Green Planet</span> empowers them to tackle poverty, unsustainable forest exploitation and to take ownership in restoring their forests. It is done through training and financial support for ecotourism initiatives, animal husbandry, tree nurseries and subsidies for fuel efficient cooking stoves to encourage a reduction in fuelwood consumption. Direct employment opportunities are created for regional community facilitators, forestry managers, accountants, project assistants etc. The Khasi are one of the world’s few matrilineal societies so women are well represented in the project.</p><br />
+			<h6>Ha Restored : 1200</h6>
+			<h6>Tons of CO<sub>2</sub> Sequestered : 203,962</h6>
+			<h6>Families Engaged : 3500</h6>
+			<h6>People trained in restoration techniques : 1000</h6>
+			<h6>People employed : 89</h6>
+			<h6>Community-based nurseries : 70</h6>
+			<h6>Indigenous tree species : 46</h6>
+		</div>
+	</section>
+	<hr /><hr />
+	
+	
+	
+	<section class="section" id="why-we-do">
+		<h2>Why we do?</h2>
+	</section>
+	<hr /><hr />
+	
+	
+	<section class="section" id="our-team">
+		<h2>Our team</h2>
+		<div id="members">
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/harsh.png" alt="" />
+				</div>
+				<div class="info">	
+					Name: Harsh Sharma <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/pranay.jpg" alt="" />
+				</div>
+				<div class="info">	
+					Name: Pranay Paratwar <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/abrar.jpg" alt="" />
+				</div>
+				<div class="info">	
+					Name: Abrar Jamadar <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/shubham.JPG" alt="" />
+				</div>
+				<div class="info">	
+					Name: Shubham Gaikwad <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/onkar.jpeg" alt="" />
+				</div>
+				<div class="info">	
+					Name: Onkar Jadhav <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+			<div class="team-member">
+				<div class="image">
+					<img src="../img/saurabh.jpg" alt="" />
+				</div>
+				<div class="info">	
+					Name: Saurabh Khade <br />
+					Class: SY CSE <br />
+					Division : A <br />
+				</div>
+			</div>
+		</div>
+	</section>
+	
+</body>
+</html>
