--- a/html/about.html
+++ b/html/about.html
@@ -40,6 +40,77 @@
 	
 	<section class="section" id="why-we-do">
 		<h2>Why we do?</h2>
+		<ol>
+			<li><b>Climate :</b></li>
+				<ul>
+					<li>Planting trees is a proven way of transforming arid and semiarid areas. Places with more 
+					trees experience frequent rains, and thus, planting trees is a perfect way to stabilize 
+					climate.</li>
+					<li>Global warming is a major concern for global leaders and environmentalists and 
+					afforestation is one of the recommended ways of addressing global warming. Trees help reverse
+					the greenhouse effect through the process of photosynthesis as they act as carbon sinks. In 
+					other words, establishing new forests create new carbon dioxide holding areas – reducing the
+					carbon dioxide in the environment. The overall outcome is the reduction of the effect of
+					global warming.</li>
+					<li>Trees also reduce the greenhouse effect preventing warmer temperatures as they are the 
+					world’s	only natural air conditioners.</li>
+				</ul>
+			<li><b>Health :</b></li>
+				<ul>
+					<li>In the last few decades, people have been producing more and more carbon dioxide through
+					their activities like driving, burning fossils, and industrial activities, resulting in more
+					carbon dioxide in the air.</li>
+					<li> The imbalance has led to more toxins in the air. In addition to carbon dioxide and 
+					greenhouse emissions, human activities like construction and driving create dust particles
+					in the air affecting the air quality. Trees not only purify carbon dioxide, but they also 
+					purify greenhouse emissions. They also trap soil particles in the air resulting in better
+					air quality.</li>
+					<li>Trees play an important role in purifying the air. People in areas with trees are less 
+					likely to suffer from air-related conditions.</li>
+				</ul>
+			<li><b>Water :</b></li>
+				<ul>
+					<li>Without clean water, the earth cannot support lives. Humans and animals rely on clean 
+					water for their	survival and hence the need to protect the watershed. </li>
+					<li>Forests act like a sponge. The trees and soil within them absorb rainfall and melted 
+					snow, reducing the risk of extreme flooding. Also, the water absorbed eventually flows into
+					rivers and streams that provide us with a steady supply of water.</li>
+					<li>  Forests also act like a filter. Filtration provided by just one national forest is
+					valued at more than $3 million annually. Every 10 percent increase in forest cover in a
+					watershed leads to a 20 percent decrease in costs for water treatment downstream from the 
+					watershed. They keep water clean by preventing the runoff of chemicals and soil into 
+					waterways.</li>
+				</ul>
+			<li><b>Wildlife :</b></li>
+				<ul>
+					<li>Deforestation fractures forest habitat. Animals use trees for food, shelter, and nesting
+					sites. But many forest-dwelling animals are threatened, largely because of deforestation and
+					forest degradation caused by climate change-induced insects and diseases, droughts and 
+					severe wildfires, as well as sprawling development.</li>
+					<li>Populations of forest-dependent wildlife species worldwide declined 53 percent between 
+					1970 and 2014, on average. Wildlife species are now going extinct at a rate 1,000 times 
+					higher than they would from natural factors.</li>
+					<li>There are multiple ways to prevent it. However, a better way would be to replace the 
+					trees cut down everyday by planting more trees everyday. Although they'll take some time
+					to grow, but it will be far more efficient than simply restricting the cutting of trees as
+					it won't affect the economy of the country.</li>
+				</ul>
+			<li><b>Soil Erosion :</b></li>
+				<ul>
+					<li>The roots of plants anchor soil to the ground. When deforestation occurs, topsoil erosion 
+					increases because there are no roots to hold the soil in place, and no vegetation to break the 
+					force of falling rain. </li>
+					<li>According to the World Wildlife Fund, half of the world’s topsoil has eroded away within
+					the past 150 years. Erosion washes soil into nearby waterways, where the increased 
+					sedimentation and pollution damages marine habitats and affects local populations that fish
+					or drink from the water source.</li>
+					<li> Additionally, the erosion of topsoil decreases soil fertility and hurts the very 
+					agricultural efforts that are often the impetus for deforestation. In the Amazon rainforest,
+					pasture and cropland dominate the clearcut sections of forest. Sedimentary runoff from 
+					deforested areas contaminates rivers, affecting everyone who uses that water.</li>
+				</ul>
+				
+		</ol>
 	</section>
 	<hr /><hr />
 	
