--- a/html/donate.html
+++ b/html/donate.html
@@ -2,43 +2,43 @@
 <html lang="en">
 <link rel="stylesheet" href="../css/donation.css">
 <link rel="icon" href="../img/download1.jpg" type="image/icon">
-<body style="background-image: url(../img/background.jpg);" id="body">
+<body style="background-image: url(../img/background.png);" id="body">
 	<form action="submited.html" autocomplete="on" method="GET" id="form">
-		<h1 style="color:white">Great futures are built with a small <span style="font-weight:bold;">charity</span>, let's go!</h1><br /><br />
-		<h1 style="color:white">Donor Information</h1>
-		<label for="f-name" style="color:aliceblue;">
+		<h1 style="color:black">Great futures are built with a small <span style="font-weight:bold;">charity</span>, let's go!</h1><br /><br />
+		<h1 style="color:black">Donor Information</h1>
+		<label for="f-name" style="color:rgb(5, 19, 2);">
 			<br><br> FULL NAME<br>
 		</label>
 		<input type="text" id="f-name" name="f-name" placeholder="eg. abcd wxyz">
 		<br><br>
-		<label for="e-mail" style="color: aliceblue;">
+		<label for="e-mail" style="color:rgb(5, 19, 2);">
 			E-MAIL ADDRESS<br>
 		</label>
 		<input type="email" id="e-mail" name="e-mail" placeholder="eg. abcxyz123@gmail.com">
 		<br><br>
-		<label for="co-no" style="color: aliceblue;">
+		<label for="co-no" style="color:rgb(5, 19, 2);">
 			CONTACT NUMBER<br>
 		</label>
 		<input type="number" id="co-no" name="co-no" placeholder="eg. 0123456789">
 		<br><br><br>
-		<label for="city" style="color: aliceblue;">
+		<label for="city" style="color:rgb(5, 19, 2);">
 			CITY<br>
 		</label>
-		<input type="text" id="city" style="color: aliceblue;" placeholder="eg. India">
+		<input type="text" id="city" style="color:rgb(5, 19, 2);" placeholder="eg. India">
 		<br><br><br>
-		<h1 style="color:white">Payment Information</h1>
+		<h1 style="color:black">Payment Information</h1>
 		<br><br>
-		<label for="card-number" style="color: aliceblue;">
+		<label for="card-number" style="color:rgb(5, 19, 2);">
 			CARD NUMBER<br>
 		</label>
-		<input type="text" id="card-number" style="color: aliceblue;" placeholder="eg. xxxx-xxxx-xxxx-xxxx">
+		<input type="text" id="card-number" style="color:rgb(5, 19, 2);" placeholder="eg. xxxx-xxxx-xxxx-xxxx">
 		<br><br>
-		<label for="date" style="color: aliceblue;">
+		<label for="date" style="color:rgb(5, 19, 2);">
 			DATE
 		</label><br>
-		<input type="date" id="date" style="color: aliceblue;" placeholder="tap to select date">
+		<input type="date" id="date" style="color:rgb(5, 19, 2);" placeholder="tap to select date">
 		<br><br>
-		<P style="color: aliceblue;font-size: 15px;">AMOUNT</P>
+		<P style="color:rgb(5, 19, 2);font-size: 15px;">AMOUNT</P>
 		<select id="amount" name="amount">
 			<option value="0">Select Amount</option>
 			<option value="1">100 Rs</option>
@@ -48,15 +48,15 @@
 			<option value="5">10000 Rs</option>
 		</select>
 		<br><br>
-		<label for="cvv" style="color: aliceblue;">
+		<label for="cvv" style="color:rgb(5, 19, 2);">
 			CARD VERIFICATION VALUE
 		</label><br />
-		<input type="number" id="cvv" style="color: aliceblue;" placeholder="CVV (OTP)">
+		<input type="number" id="cvv" style="color:rgb(5, 19, 2);" placeholder="CVV (OTP)">
 		<br><br>
-		<label for="referral" style="color: aliceblue;">
+		<label for="referral" style="color:rgb(5, 19, 2);">
 			REFERENCE CODE (if you have)
 		</label><br />
-		<input type="text" id="referral" style="color: aliceblue;" placeholder="Reference Code">
+		<input type="text" id="referral" style="color:rgb(5, 19, 2);" placeholder="Reference Code">
 		<br><br>
 		<input type="submit" value="Donate Now">
 	</form>
