--- a/html/about.html
+++ b/html/about.html
@@ -9,22 +9,33 @@
 </head>
 <body>
 	<div id="bg"></div>
-	
+
 	<div class="heading">
 		<h1>About Us</h1>
 	</div>
-	
-	
+
+
 	<section class="section" id="what-we-do">
 		<h2>What we do?</h2>
-		<p>We travell all over the world observe the condition of forest in that area and if we find out that the forest is on the way of destruction, we gather the peoples from that area, we explain them importance of forest and trees in our life. we explain them that we will not survive if trees are gone dead and with the help of them we plant trees, take of that trees and when we realise that now the forest is safe we move on.</p>
-		<p>Below is one of our project in which we saved a forest of Khasi hills in shilong, meghalaya. This is just one and we are going to does this work through out our life. But our organisation will go on serving the forests even after our death.</p>
+		<p>
+			We travell all over the world observe the condition of forest in that area and if we find out that the forest is on the way of destruction, we gather the peoples from that area, we explain them importance of forest and trees in our life. we explain them that we will not survive if trees are gone dead and with the help of them we plant trees, take of that trees and when we realise that now the forest is safe we move on.
+		</p>
+		<p>
+			Below is one of our project in which we saved a forest of Khasi hills in shilong, meghalaya. This is just one and we are going to does this work through out our life. But our organisation will go on serving the forests even after our death.
+		</p>
 		<div class="content">
 			<h5>India<br />Khasi Hills</h5>
 			<div id="khasipic"></div>
-			<p>The Khasi people are traditionally a forest-dependent community: using the native cloud forest for shelter, firewood, medicine, food and even for spiritual traditions. The Meghalaya state, or "the abode of clouds" in Sanskrit, is of international importance, recognized as one of the wettest places on earth and a biodiversity hotspot. However, the area and the communities are now at risk as the forest is being cleared by charcoal production,  stone quarrying and animal grazing.</p>
-			<p><span>Green Planet</span> team with eleven indigenous governments and 75 Khasi villages to restore the forests, using methods like Assisted Natural Regeneration (ANR) and enrichment planting. The local communities play a key role in the restoration: they manage the tree nurseries, perform the required thinning, weeding, establish the natural fire lines and delimit the no-go zones to protect the forest from animal grazing and human interference.</p>
-			<p>Through supporting self-help groups and farmer´s clubs, <span>Green Planet</span> empowers them to tackle poverty, unsustainable forest exploitation and to take ownership in restoring their forests. It is done through training and financial support for ecotourism initiatives, animal husbandry, tree nurseries and subsidies for fuel efficient cooking stoves to encourage a reduction in fuelwood consumption. Direct employment opportunities are created for regional community facilitators, forestry managers, accountants, project assistants etc. The Khasi are one of the world’s few matrilineal societies so women are well represented in the project.</p><br />
+			<p>
+				The Khasi people are traditionally a forest-dependent community: using the native cloud forest for shelter, firewood, medicine, food and even for spiritual traditions. The Meghalaya state, or "the abode of clouds" in Sanskrit, is of international importance, recognized as one of the wettest places on earth and a biodiversity hotspot. However, the area and the communities are now at risk as the forest is being cleared by charcoal production,  stone quarrying and animal grazing.
+			</p>
+			<p>
+				<span>Green Planet</span> team with eleven indigenous governments and 75 Khasi villages to restore the forests, using methods like Assisted Natural Regeneration (ANR) and enrichment planting. The local communities play a key role in the restoration: they manage the tree nurseries, perform the required thinning, weeding, establish the natural fire lines and delimit the no-go zones to protect the forest from animal grazing and human interference.
+			</p>
+			<p>
+				Through supporting self-help groups and farmer´s clubs, <span>Green Planet</span> empowers them to tackle poverty, unsustainable forest exploitation and to take ownership in restoring their forests. It is done through training and financial support for ecotourism initiatives, animal husbandry, tree nurseries and subsidies for fuel efficient cooking stoves to encourage a reduction in fuelwood consumption. Direct employment opportunities are created for regional community facilitators, forestry managers, accountants, project assistants etc. The Khasi are one of the world’s few matrilineal societies so women are well represented in the project.
+			</p>
+			<br />
 			<h6>Ha Restored : 1200</h6>
 			<h6>Tons of CO<sub>2</sub> Sequestered : 203,962</h6>
 			<h6>Families Engaged : 3500</h6>
@@ -35,85 +46,101 @@
 		</div>
 	</section>
 	<hr /><hr />
-	
-	
-	
+
+
+
 	<section class="section" id="why-we-do">
 		<h2>Why we do?</h2>
-		<ol>
-			<li><b>Climate :</b></li>
-				<ul>
-					<li>Planting trees is a proven way of transforming arid and semiarid areas. Places with more 
-					trees experience frequent rains, and thus, planting trees is a perfect way to stabilize 
-					climate.</li>
-					<li>Global warming is a major concern for global leaders and environmentalists and 
-					afforestation is one of the recommended ways of addressing global warming. Trees help reverse
-					the greenhouse effect through the process of photosynthesis as they act as carbon sinks. In 
-					other words, establishing new forests create new carbon dioxide holding areas – reducing the
-					carbon dioxide in the environment. The overall outcome is the reduction of the effect of
-					global warming.</li>
-					<li>Trees also reduce the greenhouse effect preventing warmer temperatures as they are the 
-					world’s	only natural air conditioners.</li>
-				</ul><br>
-			<li><b>Health :</b></li>
-				<ul>
-					<li>In the last few decades, people have been producing more and more carbon dioxide through
-					their activities like driving, burning fossils, and industrial activities, resulting in more
-					carbon dioxide in the air.</li>
-					<li> The imbalance has led to more toxins in the air. In addition to carbon dioxide and 
-					greenhouse emissions, human activities like construction and driving create dust particles
-					in the air affecting the air quality. Trees not only purify carbon dioxide, but they also 
-					purify greenhouse emissions. They also trap soil particles in the air resulting in better
-					air quality.</li>
-					<li>Trees play an important role in purifying the air. People in areas with trees are less 
-					likely to suffer from air-related conditions.</li>
-				</ul><br>
-			<li><b>Water :</b></li>
-				<ul>
-					<li>Without clean water, the earth cannot support lives. Humans and animals rely on clean 
-					water for their	survival and hence the need to protect the watershed. </li>
-					<li>Forests act like a sponge. The trees and soil within them absorb rainfall and melted 
-					snow, reducing the risk of extreme flooding. Also, the water absorbed eventually flows into
-					rivers and streams that provide us with a steady supply of water.</li>
-					<li>  Forests also act like a filter. Filtration provided by just one national forest is
-					valued at more than $3 million annually. Every 10 percent increase in forest cover in a
-					watershed leads to a 20 percent decrease in costs for water treatment downstream from the 
-					watershed. They keep water clean by preventing the runoff of chemicals and soil into 
-					waterways.</li>
-				</ul><br>
-			<li><b>Wildlife :</b></li>
-				<ul>
-					<li>Deforestation fractures forest habitat. Animals use trees for food, shelter, and nesting
-					sites. But many forest-dwelling animals are threatened, largely because of deforestation and
-					forest degradation caused by climate change-induced insects and diseases, droughts and 
-					severe wildfires, as well as sprawling development.</li>
-					<li>Populations of forest-dependent wildlife species worldwide declined 53 percent between 
-					1970 and 2014, on average. Wildlife species are now going extinct at a rate 1,000 times 
-					higher than they would from natural factors.</li>
-					<li>There are multiple ways to prevent it. However, a better way would be to replace the 
-					trees cut down everyday by planting more trees everyday. Although they'll take some time
-					to grow, but it will be far more efficient than simply restricting the cutting of trees as
-					it won't affect the economy of the country.</li>
-				</ul><br>
-			<li><b>Soil Erosion :</b></li>
-				<ul>
-					<li>The roots of plants anchor soil to the ground. When deforestation occurs, topsoil erosion 
-					increases because there are no roots to hold the soil in place, and no vegetation to break the 
-					force of falling rain. </li>
-					<li>According to the World Wildlife Fund, half of the world’s topsoil has eroded away within
-					the past 150 years. Erosion washes soil into nearby waterways, where the increased 
-					sedimentation and pollution damages marine habitats and affects local populations that fish
-					or drink from the water source.</li>
-					<li> Additionally, the erosion of topsoil decreases soil fertility and hurts the very 
-					agricultural efforts that are often the impetus for deforestation. In the Amazon rainforest,
-					pasture and cropland dominate the clearcut sections of forest. Sedimentary runoff from 
-					deforested areas contaminates rivers, affecting everyone who uses that water.</li>
-				</ul><br>
-		</ol>
+		<div class="list">
+			<ol>
+				<li><b>Climate :</b></li>
+				<div class="item">
+					<div class="why-images" id="climate"></div>
+					<ul>
+						<li>Planting trees is a proven way of transforming arid and semiarid areas. Places with more
+							trees experience frequent rains, and thus, planting trees is a perfect way to stabilize
+							climate.</li>
+						<li>Global warming is a major concern for global leaders and environmentalists and
+							afforestation is one of the recommended ways of addressing global warming. Trees help reverse
+							the greenhouse effect through the process of photosynthesis as they act as carbon sinks. In
+							other words, establishing new forests create new carbon dioxide holding areas – reducing the
+							carbon dioxide in the environment. The overall outcome is the reduction of the effect of
+							global warming.</li>
+						<li>Trees also reduce the greenhouse effect preventing warmer temperatures as they are the
+							world’s	only natural air conditioners.</li>
+					</ul>
+				</div>
+				<li><b>Health :</b></li>
+				<div class="item">
+					<div class="why-images" id="health"></div>
+					<ul>
+						<li>In the last few decades, people have been producing more and more carbon dioxide through
+							their activities like driving, burning fossils, and industrial activities, resulting in more
+							carbon dioxide in the air.</li>
+						<li> The imbalance has led to more toxins in the air. In addition to carbon dioxide and
+							greenhouse emissions, human activities like construction and driving create dust particles
+							in the air affecting the air quality. Trees not only purify carbon dioxide, but they also
+							purify greenhouse emissions. They also trap soil particles in the air resulting in better
+							air quality.</li>
+						<li>Trees play an important role in purifying the air. People in areas with trees are less
+							likely to suffer from air-related conditions.</li>
+					</ul>
+				</div>
+				<li><b>Water :</b></li>
+				<div class="item">
+					<div class="why-images" id="water"></div>
+					<ul>
+						<li>Without clean water, the earth cannot support lives. Humans and animals rely on clean
+							water for their	survival and hence the need to protect the watershed. </li>
+						<li>Forests act like a sponge. The trees and soil within them absorb rainfall and melted
+							snow, reducing the risk of extreme flooding. Also, the water absorbed eventually flows into
+							rivers and streams that provide us with a steady supply of water.</li>
+						<li>  Forests also act like a filter. Filtration provided by just one national forest is
+							valued at more than $3 million annually. Every 10 percent increase in forest cover in a
+							watershed leads to a 20 percent decrease in costs for water treatment downstream from the
+							watershed. They keep water clean by preventing the runoff of chemicals and soil into
+							waterways.</li>
+					</ul>
+				</div>
+				<li><b>Wildlife :</b></li>
+				<div class="item">
+					<div class="why-images" id="wild"></div>
+					<ul>
+						<li>Deforestation fractures forest habitat. Animals use trees for food, shelter, and nesting
+							sites. But many forest-dwelling animals are threatened, largely because of deforestation and
+							forest degradation caused by climate change-induced insects and diseases, droughts and
+							severe wildfires, as well as sprawling development.</li>
+						<li>Populations of forest-dependent wildlife species worldwide declined 53 percent between
+							1970 and 2014, on average. Wildlife species are now going extinct at a rate 1,000 times
+							higher than they would from natural factors.</li>
+						<li>There are multiple ways to prevent it. However, a better way would be to replace the
+							trees cut down everyday by planting more trees everyday. Although they'll take some time
+							to grow, but it will be far more efficient than simply restricting the cutting of trees as
+							it won't affect the economy of the country.</li>
+					</ul>
+				</div>
+				<li><b>Soil Erosion :</b></li>
+				<div class="item">
+					<div class="why-images" id="soil"></div>
+					<ul>
+						<li>The roots of plants anchor soil to the ground. When deforestation occurs, topsoil erosion
+							increases because there are no roots to hold the soil in place, and no vegetation to break the
+							force of falling rain. </li>
+						<li>According to the World Wildlife Fund, half of the world’s topsoil has eroded away within
+							the past 150 years. Erosion washes soil into nearby waterways, where the increased
+							sedimentation and pollution damages marine habitats and affects local populations that fish
+							or drink from the water source.</li>
+						<li> Additionally, the erosion of topsoil decreases soil fertility and hurts the very
+							agricultural efforts that are often the impetus for deforestation. In the Amazon rainforest,
+							pasture and cropland dominate the clearcut sections of forest. Sedimentary runoff from
+							deforested areas contaminates rivers, affecting everyone who uses that water.</li>
+					</ul>
+				</div>
+			</ol>
+		</div>
 	</section>
 	<hr /><hr />
-	
-	
+
 	<section class="section" id="our-team">
 		<h2>Our team</h2>
 		<div id="members">
@@ -121,7 +148,7 @@
 				<div class="image">
 					<img src="../img/harsh.png" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Harsh Sharma <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -131,7 +158,7 @@
 				<div class="image">
 					<img src="../img/pranay.jpg" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Pranay Paratwar <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -141,7 +168,7 @@
 				<div class="image">
 					<img src="../img/abrar.jpg" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Abrar Jamadar <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -151,7 +178,7 @@
 				<div class="image">
 					<img src="../img/shubham.JPG" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Shubham Gaikwad <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -161,7 +188,7 @@
 				<div class="image">
 					<img src="../img/onkar.jpeg" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Onkar Jadhav <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -171,7 +198,7 @@
 				<div class="image">
 					<img src="../img/saurabh.jpg" alt="" />
 				</div>
-				<div class="info">	
+				<div class="info">
 					Name: Saurabh Khade <br />
 					Class: SY CSE <br />
 					Division : A <br />
@@ -179,6 +206,6 @@
 			</div>
 		</div>
 	</section>
-	
+
 </body>
 </html>
