--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,13 @@
 	<link rel="stylesheet" href="../css/about.css" type="text/css" media="all" />
 </head>
 <body>
+	<div id="nav">
+		<a href="../index.html">Home</a>
+		<a href="#what-we-do">What we do?</a>
+		<a href="#why-we-do">Why we do?</a>
+		<a href="#our-team">Our team</a>
+	</div>
+	
 	<div id="bg"></div>
 
 	<div class="heading">
