--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
         <div class="navbar">
             <ul class="list">
                 <li class="listitems" id="active"><a href="">Home</a></li>
-                <li class="listitems"><a href="">About</a></li>
+                <details>
+			<summary>About</summary><br />
+			<a href="html/about.html">
+				About us
+			</a><br /><br />
+			<a href="html/about.html#what-we-do">
+				What we do?
+			</a><br /><br />
+			<a href="html/about.html#why-we-do">
+				Why we do?
+			</a><br /><br />
+			<a href="html/about.html#our-team">
+				Our team
+			</a>
+		</details>
                 <li class="listitems"><a href="html/donate.html">Donate</a></li>
             </ul>
         </div>
