--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GREEN PLANET</title>
     
-    <link rel="icon" href=" download1.jpg" type="icon"> 
+    <link rel="icon" href=" img/download1.jpg" type="icon"> 
     <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
