--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="background"></div>
     
     <header class="header">
-        <h1 ><img src="img/logo_1.PNG"><font color="#33FF00">GREEN PL@NET</font></h1>
+        <h1 ><img src="img/logo_1.png"><font color="#33FF00">GREEN PL@NET</font></h1>
        
     </header>
     <nav id="nav">
