--- a/html/donate.html
+++ b/html/donate.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="../css/donation.css">
+	<meta name="viewpoint" content="width=device-width,initial-scale=1">
+	 <meta charset="utf-8">
+	<title>Green Planet - donation</title>
 <link rel="icon" href="../img/download1.jpg" type="image/icon">
-<body style="background-image: url(../img/background.png);" id="body">
+	
+<body>
+	<div class="background"></div>
 	<form action="submited.html" autocomplete="on" method="GET" id="form">
 		<h1 style="color:black">Great futures are built with a small <span style="font-weight:bold;">charity</span>, let's go!</h1><br /><br />
 		<h1 style="color:black">Donor Information</h1>
