--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Green Planet - About Us</title>
 	<link rel="stylesheet" href="../css/about.css" type="text/css" media="all" />
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Open+Sans&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<div id="nav">
@@ -216,3 +217,4 @@
 
 </body>
 </html>
+
