--- a/html/submited.html
+++ b/html/submited.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+   	 <link rel="icon" href=" ../img/download1.jpg" type="icon">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Donation successful</title>
 	<style type="text/css" media="all">
