--- a/html/donate.html
+++ b/html/donate.html
@@ -4,6 +4,7 @@
 	<meta name="viewpoint" content="width=device-width,initial-scale=1">
 	 <meta charset="utf-8">
 	<title>Green Planet - donation</title>
+	<link rel="icon" href=" img/download1.jpg" type="icon">
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Open+Sans&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet"> 
 <link rel="icon" href="../img/download1.jpg" type="image/icon">
 	
