--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Green Planet - About Us</title>
 	<link rel="stylesheet" href="../css/about.css" type="text/css" media="all" />
-    	<link rel="icon" href=" img/download1.jpg" type="icon">
+    	<link rel="icon" href=" ../img/download1.jpg" type="icon">
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Open+Sans&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
