--- a/html/submited.html
+++ b/html/submited.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Open+Sans&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet"> 
    	 <link rel="icon" href=" ../img/download1.jpg" type="icon">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Donation successful</title>
@@ -26,12 +27,18 @@
 		#first{
 			font-size: 2rem;
 			margin-bottom: 5px;
+			font-family: 'Work Sans', sans-serif;
+	color: rgb(2, 19, 0);
 		}
 		#second{
 			font-size: 1.6rem;
+			font-family: 'Work Sans', sans-serif;
+	color: rgb(2, 19, 0);
 		}
 		#third{
 			font-size: 1.4rem;
+			color:rgb(2,70,2)
+			
 		}
 		a{
 			text-decoration: none;
@@ -52,6 +59,7 @@
 	<div id="box">
 		<span id="first">Your responses has submitted successfully</span>
 		<span id="second">Thanks for your contribution, your small help can protect countless trees</span>
+		<br><br>
 		<span id="third"><a href="./donate.html">&#8592;Back</a></span>
 	</div>
 </body>
