--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href=" img/download1.jpg" type="icon"> 
     <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Open+Sans&family=Rubik&family=Work+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<div id="loader">
@@ -21,7 +22,7 @@
     <div class="background"></div>
     
     <header class="header">
-        <h1 ><img src="img/logo_1.PNG"><font color="#33FF00">GREEN PL@NET</font></h1>
+        <h1 ><img src="img/logo_1.PNG"><font color="#33FF00">GREEN PLANET</font></h1>
        
     </header>
     <nav id="nav">
