--- a/html/submited.html
+++ b/html/submited.html
@@ -58,7 +58,7 @@
 	<div class="background"></div>
 	<div id="box">
 		<span id="first">Your responses has submitted successfully</span>
-		<span id="second">Thanks for your contribution, your small help can protect countless trees</span>
+		<span id="second">Thanks for your contribution, your small help can protect countless trees<br><br></span>
 		<br><br>
 		<span id="third"><a href="./donate.html">&#8592;Back</a></span>
 	</div>
