--- a/html/donate.html
+++ b/html/donate.html
@@ -70,6 +70,8 @@
 		<input type="text" id="referral" style="color:rgb(5, 19, 2);" placeholder="Reference Code">
 		<br><br>
 		<input type="submit" value="Donate Now">
+		<br><br>
+		<a href="../index.html">Back to Home</a>
 		<br><br><br><br>
 	</form>
 	<script type="text/javascript" charset="utf-8">
