--- a/html/donate.html
+++ b/html/donate.html
@@ -71,7 +71,7 @@
 		<br><br>
 		<input type="submit" value="Donate Now">
 		<br><br>
-		<a href="../index.html" id="back-to-home">Back to Home</a>
+		<a href="../index.html" id="back-to-home">&#8592;Back to Home</a>
 		<br><br><br><br>
 	</form>
 	<script type="text/javascript" charset="utf-8">
