--- a/html/donate.html
+++ b/html/donate.html
@@ -71,8 +71,9 @@
 		<br><br>
 		<input type="submit" value="Donate Now">
 		<br><br>
-		<a href="../index.html" id="back-to-home">&#8592;Back to Home</a>
+		<a href="../index.html" style="color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
 		<br><br><br><br>
+
 	</form>
 	<script type="text/javascript" charset="utf-8">
 		let form = document.getElementById('form');
