--- a/html/donate.html
+++ b/html/donate.html
@@ -69,12 +69,11 @@
 		</label><br />
 		<input type="text" id="referral" style="color:rgb(5, 19, 2);" placeholder="Reference Code">
 		<br><br>
-		<input type="submit" value="Donate Now">
+		<<ainput type="submit" value="Donate Now">
 		<br><br>
-		<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
-		<br><br><br><br>
-
 	</form>
+	<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
+		<br><br><br><br>
 	<script type="text/javascript" charset="utf-8">
 		let form = document.getElementById('form');
 		let screenWidth = parseInt(screen.width);
