--- a/html/donate.html
+++ b/html/donate.html
@@ -69,7 +69,7 @@
 		</label><br />
 		<input type="text" id="referral" style="color:rgb(5, 19, 2);" placeholder="Reference Code">
 		<br><br>
-		<<ainput type="submit" value="Donate Now">
+		<ainput type="submit" value="Donate Now">
 		<br><br>
 	</form>
 	<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
