--- a/html/donate.html
+++ b/html/donate.html
@@ -72,7 +72,7 @@
 		<input type="submit" value="Donate Now">
 		<br><br>
 	</form>
-	<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Home</a>
+	<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
 		<br><br><br><br>
 	<script type="text/javascript" charset="utf-8">
 		let form = document.getElementById('form');
