--- a/html/donate.html
+++ b/html/donate.html
@@ -72,8 +72,10 @@
 		<input type="submit" value="Donate Now">
 		<br><br>
 	</form>
-	<a href="../index.html" style="font-size: 25px ; margin-left: 67% ;color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
-		<br><br><br><br>
+	<div style="text-align: center;">
+	<a href="../index.html" style="font-size: 25px ; color: black;text-decoration: none;text-align: center;font-weight: bold;">&#8592;Back to Home</a>
+	</div>
+	<br><br><br><br>
 	<script type="text/javascript" charset="utf-8">
 		let form = document.getElementById('form');
 		let screenWidth = parseInt(screen.width);
